--- a/assets/estefa/index.html
+++ b/assets/estefa/index.html
@@ -71,7 +71,7 @@
 
     <main class="contenedor__flex__columna__centrado__centrado">
 
-      <iframe id="menu" src="entradas1.html" frameborder="0" width="100%"  height="1800px"></iframe>></iframe>
+      <iframe id="menu" src="entradas1.html" frameborder="0" width="100%" style="width: 100%;"  height="1800px"></iframe>></iframe>
 
 
 
