--- a/lib/laboratorio/logo__3d.html
+++ b/lib/laboratorio/logo__3d.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Imagen 3D en CSS</title>
+    <title>Imagen 3D en CSS riveradev carlosmariorivera.com</title>
+    <!-- Event snippet for Vista de página conversion page -->
+    <script>
+      gtag("event", "conversion", {
+        send_to: "AW-16752160180/NL6-CLeY3eMZELTbhrQ-",
+        value: 1.0,
+        currency: "COP",
+      });
+    </script>
+
     <style>
       body {
       	display: flex;
