--- a/secciones/bi/bi.html
+++ b/secciones/bi/bi.html
@@ -81,17 +81,20 @@
 
       <section id="business-intelligence" class="contenedor__bi">
         <div class="bi__elemento">
-          <div class="contenedor__flex__columna__centrado">
+          <div class="contenedor__flex__columna__centrado__centrado">
             <div class="contenedor__grid__2">
-              <canvas
-                id="chart2"
-                class="gradiente__frio gradiente__diagonal"
-              ></canvas>
-
-              <canvas
-                id="chart3"
-                class="gradiente__frio gradiente__diagonal"
-              ></canvas>
+              
+        <divd class="canvas__bi">
+                <canvas
+                  id="chart2"
+                  class="gradiente__frio gradiente__diagonal"
+                ></canvas>
+          
+                <canvas
+                  id="chart3"
+                  class="gradiente__frio gradiente__diagonal"
+                ></canvas>
+        </div>
             </div>
             <div class="tabla__contenedor">
               <h2>Estadísticas Mensuales</h2>
