--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -1,164 +1,166 @@
 <link rel="stylesheet" href="../../estilos/estilo.css" />
 <link rel="stylesheet" href="./contacto.css" />
 <h2 class="subtitulo">
-  <span>&lt;&frasl;&nbsp;</span>
-  <span>C</span>ontacto
+	<span>&lt;&frasl;&nbsp;</span>
+	<span>C</span>ontacto
 </h2>
 <footer>
-  <section class="seccion__principal">
-    <!-- Laboratorio -->
-    <div class="tarjeta__footer tarjeta__footer--laboratorio gradiente__frio">
-      <h2 class="tarjeta__footer__titulo"><span>L</span>aboratorio</h2>
-      <div class="tarjeta__linea__gradiente"></div>
-      <ul class="tarjeta__footer__lista">
-        <li>
-          <a
-            href="../../lib/laboratorio/css_riverac/laboratorio.html"
-            target="_blank"
-            class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
-            >Componente 1</a
-          >
-        </li>
-        <!-- Puedes agregar más enlaces aquí -->
-      </ul>
-      <p class="tarjeta__footer__descripcion">
-        <span>E</span>xplora componentes y animaciones experimentales.
-      </p>
-    </div>
+	<section class="seccion__principal">
+		<!-- Laboratorio -->
+		<div class="tarjeta__footer tarjeta__footer--laboratorio gradiente__frio">
+			<h2 class="tarjeta__footer__titulo"><span>L</span>aboratorio</h2>
+			<div class="tarjeta__linea__gradiente"></div>
+			<ul class="tarjeta__footer__lista">
+				<li>
+					<a
+						href="../../lib/laboratorio/css_riverac/laboratorio.html"
+						target="_blank"
+						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
+						>Componente 1</a
+					>
+				</li>
+				<!-- Puedes agregar más enlaces aquí -->
+			</ul>
+			<p class="tarjeta__footer__descripcion">
+				<span>E</span>xplora componentes y animaciones experimentales.
+			</p>
+		</div>
 
-    <!-- Contacto (resaltado y central) -->
-    <div class="tarjeta__footer tarjeta__footer--contacto gradiente__frio">
-      <h2 class="tarjeta__footer__titulo">Contactame</h2>
-      <div class="tarjeta__linea__gradiente"></div>
-      <div class="tarjeta__footer__contacto-item">
-        <i class="material-icons">email</i>
+		<!-- Contacto (resaltado y central) -->
+		<div class="tarjeta__footer tarjeta__footer--contacto gradiente__frio">
+			<h2 class="tarjeta__footer__titulo">Contactame</h2>
+			<div class="tarjeta__linea__gradiente"></div>
+			<div class="tarjeta__footer__contacto-item">
+				<i class="material-icons">email</i>
 
-        <a
-          href="mailto:carlosmrz100@hotmail.com"
-          id="emailText"
-          class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
-        >
-          carlosmrz100@hotmail.com
-        </a>
-        <span id="copyEmailButton"><i class="material-icons">copy</i></span>
-      </div>
-      <div class="tarjeta__footer__contacto-item">
-        <i class="material-icons">phone</i>
-        <span class="tarjeta__footer__texto">+57 311 755 9365</span>
-      </div>
-    </div>
+				<a
+					href="mailto:carlosmrz100@hotmail.com"
+					id="emailText"
+					class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
+				>
+					carlosmrz100@hotmail.com
+				</a>
+				<span id="copyEmailButton"><i class="material-icons">copy</i></span>
+			</div>
+			<div class="tarjeta__footer__contacto-item">
+				<i class="material-icons">phone</i>
+				<span class="tarjeta__footer__texto">+57 311 755 9365</span>
+			</div>
+		</div>
 
-    <!-- Apps -->
-    <div class="tarjeta__footer tarjeta__footer--apps gradiente__frio">
-      <h2 class="tarjeta__footer__titulo">Apps</h2>
-      <div class="tarjeta__linea__gradiente"></div>
-      <ul class="tarjeta__footer__lista">
-        <li>
-          <a
-            href="../../assets/apps/sara/index.html"
-            target="_blank"
-            class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
-            >Sarita - Videojuego</a
-          >
-        </li>
-        <li>
-          <a
-            href="../../assets/apps/focus_riveradev/focus_riveradev.html"
-            target="_blank"
-            class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
-            >Pomodoro - Productividad</a
-          >
-        </li>
-      </ul>
-    </div>
-  </section>
+		<!-- Apps -->
+		<div class="tarjeta__footer tarjeta__footer--apps gradiente__frio">
+			<h2 class="tarjeta__footer__titulo">Apps</h2>
+			<div class="tarjeta__linea__gradiente"></div>
+			<ul class="tarjeta__footer__lista">
+				<li>
+					<a
+						href="../../assets/apps/sara/sara.html"
+						target="_blank"
+						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
+						>Sarita - Videojuego</a
+					>
+				</li>
+				<li>
+					<a
+						href="../../assets/apps/focus_riveradev/focus_riveradev.html"
+						target="_blank"
+						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
+						>Pomodoro - Productividad</a
+					>
+				</li>
+			</ul>
+		</div>
+	</section>
 
-  <section class="contenedor__flex__columna">
-    <div class="animacion__resplandor sonido__hover">
-      <span>C</span>arlos<span>M</span>ario<span>R</span>ivera.com
-    </div>
-    <h6 class="texto__atractivo"><span>R</span>edes<span>S</span>ociales</h6>
-    <div class="contenedor__medio">
-      <a
-        href="https://www.linkedin.com/in/carlosmariorivera"
-        target="_blank"
-        aria-label="LinkedIn"
-        class="icono__linkedin"
-      ></a>
-      <a
-        href="https://github.com/carlosmriveraz"
-        target="_blank"
-        aria-label="GitHub"
-        class="icono__github"
-      ></a>
-      <a
-        href="https://wa.me/+573117559365"
-        target="_blank"
-        aria-label="WhatsApp"
-        class="btn-whatsapp icono__whatsapp"
-      ></a>
-    </div>
-  </section>
+	<section class="contenedor__flex__columna">
+		<div class="animacion__resplandor sonido__hover">
+			<span>C</span>arlos<span>M</span>ario<span>R</span>ivera.com
+		</div>
+		<h6 class="texto__atractivo"><span>R</span>edes<span>S</span>ociales</h6>
+		<div class="contenedor__medio">
+			<a
+				href="https://www.linkedin.com/in/carlosmariorivera"
+				target="_blank"
+				aria-label="LinkedIn"
+				class="icono__linkedin"
+			></a>
+			<a
+				href="https://github.com/carlosmriveraz"
+				target="_blank"
+				aria-label="GitHub"
+				class="icono__github"
+			></a>
+			<a
+				href="https://wa.me/+573117559365"
+				target="_blank"
+				aria-label="WhatsApp"
+				class="btn-whatsapp icono__whatsapp"
+			></a>
+		</div>
+	</section>
 
-  <div class="footer__bottom">
-    <p class="footer__policy">
-      <a href="../../html/footer/cookies.html">Política de Cookies</a> |
-      Licencias e Inspiraciones (en estructuración).
-    </p>
-  </div>
+	<div class="footer__bottom">
+		<p class="footer__policy">
+			<a href="../../html/footer/cookies.html">Política de Cookies</a> |
+			Licencias e Inspiraciones (en estructuración).
+		</p>
+	</div>
 
-  <div class="contenedor_letra margen__grande">
-    <div class="letra-grande">
-      &copy; <span id="year"></span> By RiveraDev Todos los derechos reservados.
-    </div>
-  </div>
+	<div class="contenedor_letra margen__grande">
+		<div class="letra-grande">
+			&copy; <span class="year"></span> By RiveraDev Todos los derechos
+			reservados.
+		</div>
+	</div>
+	<script type="module" src="../../scripts/js/year.js"></script>
 
-  <script src="../../assets/music/reproducir_sonido.js"></script>
+	<script src="../../assets/music/reproducir_sonido.js"></script>
 
-  <script>
-    document
-      .getElementById("copyEmailButton")
-      .addEventListener("click", function (event) {
-        event.preventDefault(); // Evita que el enlace recargue la página
+	<script>
+		document
+			.getElementById("copyEmailButton")
+			.addEventListener("click", function (event) {
+				event.preventDefault(); // Evita que el enlace recargue la página
 
-        var email = "carlosmrz100@hotmail.com";
+				var email = "carlosmrz100@hotmail.com";
 
-        // Crea un campo de texto temporal para copiar el email
-        var tempInput = document.createElement("input");
-        tempInput.value = email;
-        document.body.appendChild(tempInput);
+				// Crea un campo de texto temporal para copiar el email
+				var tempInput = document.createElement("input");
+				tempInput.value = email;
+				document.body.appendChild(tempInput);
 
-        // Selecciona el contenido del campo temporal
-        tempInput.select();
-        tempInput.setSelectionRange(0, 99999); // Para móviles
+				// Selecciona el contenido del campo temporal
+				tempInput.select();
+				tempInput.setSelectionRange(0, 99999); // Para móviles
 
-        // Copia el contenido al portapapeles
-        document.execCommand("copy");
+				// Copia el contenido al portapapeles
+				document.execCommand("copy");
 
-        // Elimina el campo temporal
-        document.body.removeChild(tempInput);
+				// Elimina el campo temporal
+				document.body.removeChild(tempInput);
 
-        // Feedback al usuario
-        this.textContent = "¡Email Copiado!";
+				// Feedback al usuario
+				this.textContent = "¡Email Copiado!";
 
-        // Restaura el texto del botón después de 2 segundos
-        setTimeout(() => {
-          this.textContent = "Copiar Email";
-        }, 2000);
-      });
-  </script>
-  <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=AW-16752160180"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+				// Restaura el texto del botón después de 2 segundos
+				setTimeout(() => {
+					this.textContent = "Copiar Email";
+				}, 2000);
+			});
+	</script>
+	<!-- Google tag (gtag.js) -->
+	<script
+		async
+		src="https://www.googletagmanager.com/gtag/js?id=AW-16752160180"
+	></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag("js", new Date());
 
-    gtag("config", "AW-16752160180");
-  </script>
+		gtag("config", "AW-16752160180");
+	</script>
 </footer>
