--- a/assets/apps/Zitius__menu.html
+++ b/assets/apps/Zitius__menu.html
@@ -22,17 +22,7 @@
 		</style>
 	</head>
 	<body>
-		<object
-			data="menu.pdf"
-			type="application/pdf"
-			class="pdf-object"
-			width="100%"
-			height="100vh"
-		>
-			<p>
-				Tu navegador no soporta PDFs.
-				<a href="menu.pdf">Descarga el PDF aquí</a>.
-			</p>
-		</object>
+		<iframe class="pdf-object" src="menu.pdf" width="100%" height="100vh">
+		</iframe>
 	</body>
 </html>
