--- a/assets/apps/Zitius__menu.html
+++ b/assets/apps/Zitius__menu.html
@@ -3,26 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Zituis</title>
-		<style>
-			* {
-				margin: 0;
-				padding: 0;
-				box-sizing: border-box;
-			}
-			body {
-				font-family: Arial, sans-serif;
-				background-color: #f0f0f0;
-			}
-			.pdf-object {
-				border: 1px solid #000;
-				width: 100%;
-				height: 100vh;
-			}
-		</style>
+		<title>Galería de Imágenes</title>
+		<link rel="stylesheet" href="estilos__galeria.css" />
 	</head>
 	<body>
-		<iframe class="pdf-object" src="menu.pdf" width="100%" height="100vh">
-		</iframe>
+		<main>
+			<!-- Galería de imágenes -->
+			<section class="galeria__contenedor">
+				<!-- Imágenes numeradas del 1 al 8 -->
+				<img src="1.png" alt="Imagen 1" class="galeria__imagen" />
+				<img src="2.png" alt="Imagen 2" class="galeria__imagen" />
+				<img src="3.png" alt="Imagen 3" class="galeria__imagen" />
+				<img src="4.png" alt="Imagen 4" class="galeria__imagen" />
+				<img src="5.png" alt="Imagen 5" class="galeria__imagen" />
+				<img src="6.png" alt="Imagen 6" class="galeria__imagen" />
+				<img src="7.png" alt="Imagen 7" class="galeria__imagen" />
+				<img src="8.png" alt="Imagen 8" class="galeria__imagen" />
+			</section>
+		</main>
 	</body>
 </html>
