--- a/assets/apps/Zitius__menu.html
+++ b/assets/apps/Zitius__menu.html
@@ -5,6 +5,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Galería de Imágenes</title>
 		<link rel="stylesheet" href="estilos__galeria.css" />
+		<style>
+			img {
+				width: 100%;
+			}
+			.galeria__contenedor {
+				display: flex;
+				flex-direction: column;
+			}
+		</style>
 	</head>
 	<body>
 		<main>
